--- a/source_code_as_zip/gradle.properties
+++ b/source_code_as_zip/gradle.properties
@@ -1,3 +1,3 @@
-artifactory_user=publisher
-artifactory_password=*****
-artifactory_contextUrl=http://IP:PORT/artifactory
+artifactoryUser=publisher
+artifactoryPassword=*****
+artifactoryUrl=http://IP:PORT/artifactory
